Add "quiet" to the x86-64 and i386 boot arguments.

--- a/data/bootdisk/i386/syslinux.cfg
+++ b/data/bootdisk/i386/syslinux.cfg
@@ -19,15 +19,15 @@ label linux
   menu label ^Install a new system or upgrade an existing system
   menu default
   kernel vmlinuz
-  append initrd=initrd.img
+  append initrd=initrd.img quiet
 label vesa
   menu label Install system with ^basic video driver
   kernel vmlinuz
-  append initrd=initrd.img xdriver=vesa nomodeset
+  append initrd=initrd.img xdriver=vesa nomodeset quiet
 label rescue
   menu label ^Rescue installed system
   kernel vmlinuz
-  append initrd=initrd.img rescue
+  append initrd=initrd.img rescue quiet
 label local
   menu label Boot from ^local drive
   localboot 0xffff
