--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -232,6 +232,47 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Mon Apr 11 2011 David Lehman <dlehman@redhat.com> - 16.5-1
+- Remove maximum limit on EFI partition (#684860) (bcl)
+- Changes for NetworkManager API 0.9 (rvykydal)
+- Fix network --device=bootif value processing in stage2. (vpodzime)
+- Ignore --device=ibft in stage 2 kickstart handling (#638131) (vpodzime)
+- Don't write HWADDR into ifcfg files (#690589) (rvykydal)
+- Fix network --device=<MAC> for static configurations (#693302) (rvykydal)
+- Fix bad indentation from 026dacc3. (akozumpl)
+- If we change language during Python, build the new locale files. (clumens)
+- If we're not given a language on the command line, set up English. (clumens)
+- No longer log that we're resetting the file context. (clumens)
+- Do filesystem-specific sync operation after writing configuration. (dlehman)
+- Add sync method to force data onto disk and/or journal. (dlehman)
+- Update ui screens to use new bootloader module. (dlehman)
+- Update remaining parts of anaconda to use new bootloader module. (dlehman)
+- Update storage module for new platform and bootloader modules. (dlehman)
+- Update platform.py for new bootloader module. (dlehman)
+- Update kickstart.py for new bootloader module. (dlehman)
+- Replace booty with a new bootloader module. (dlehman)
+- Add "disks" attr to StorageDevice to list disks a device depends on.
+  (dlehman)
+- Prevent debug and kdump kernels from becoming the default (#693702)
+  (dcantrell)
+- Use znet_cio_free to clear network devices from cio_ignore. (dcantrell)
+- Remove deprecated targets from top level Makefile.am (dcantrell)
+- Remove languages not available from Transifex. (dcantrell)
+- Add Transifex instructions for anaconda developers. (dcantrell)
+- Update Makefile.am to work with new translation system. (dcantrell)
+- BuildRequires transifex-client (dcantrell)
+- Ignore po/*.po files (dcantrell)
+- Remove translation files. (dcantrell)
+- Add transifex-client configuration file. (dcantrell)
+- Fix syntax error from commit 9e696b62. (akozumpl)
+- Rewrite nfs url parsing in loader (bcl)
+- Fix order of nfs mountOpts in promptForNfs (bcl)
+- timeout= in yaboot.conf is in tenths of seconds (#692409) (dcantrell)
+- Install dracut-fips package when fips=1 is specified (#692350) (dcantrell)
+- unicode-linedraw-chars.txt is no longer useful. (clumens)
+- mkctype is no longer useful. (clumens)
+- Fix a typo in swap upgrade strings (yurchor (clumens)
+
 * Thu Mar 31 2011 Chris Lumens <clumens@redhat.com> - 16.4-1
 - Fix a syntax error from the previous translation commit. (clumens)
 - crypttab should not be world-readable (#692254). (clumens)
