--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -221,6 +221,16 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Mon Apr 18 2011 Martin Sivak <msivak@redhat.com> - 13.21.113-1
+- If there are no RAID arrays, do not write an mdadm.conf (clumens).
+  Resolves: rhbz#696907
+- fipscheck has to be in /usr/bin (mgracik)
+  Resolves: rhbz#692825
+- Revert "Don't write HWADDR into ifcfg files (rvykydal)"
+  Related: rhbz#690589
+- Revert "Fix traceback of network --device=<MAC> (rvykydal)"
+  Related: rhbz#694768
+
 * Wed Apr 13 2011 Martin Sivak <msivak@redhat.com> - 13.21.112-1
 - Add more files needed by sshd in fips mode (mgracik)
   Resolves: rhbz#692825
