--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -221,6 +221,10 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Wed Apr 20 2011 David Cantrell <dcantrell@redhat.com> - 13.21.115-1
+- Write 'edd' instead of 'ethX' for fcoe= dracut parameter. (dcantrell)
+  Related: rhbz#692939
+
 * Tue Apr 19 2011 Martin Sivak <msivak@redhat.com> - 13.21.114-1
 - Fix SIGSEGV for netwowrk --device=<MAC> which is not found (rvykydal)
   Resolves: rhbz#697432
