Add a python program to record memory usage during installation.
This program only runs during installation if the "debug" command line option
is provided.  It writes out a /tmp/memory.dat file which can be copied off the
system and processed with the provided gnuplot script to display a graph.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -209,6 +209,7 @@ update-desktop-database &> /dev/null || :
 %doc docs/anaconda-release-notes.txt
 /lib/systemd/system/*
 /lib/udev/rules.d/70-anaconda.rules
+%{_bindir}/instperf
 %{_sbindir}/anaconda
 %{_sbindir}/logpicker
 %ifarch i386 i486 i586 i686 x86_64
