--- a/data/systemd/loader.service
+++ b/data/systemd/loader.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=The anaconda loader
-Requires=dbus.service udev.service rsyslog.service tmp.mount
-After=dbus.service udev.service rsyslog.service tmp.mount
+Requires=dbus.service udev.service rsyslog.service tmp.mount instperf.service
+After=dbus.service udev.service rsyslog.service tmp.mount instperf.service
 
 [Service]
 Environment=HOME=/root MALLOC_CHECK_=2 MALLOC_PERTURB_=204 PATH=/usr/bin:/bin:/sbin:/usr/sbin:/mnt/sysimage/bin:/mnt/sysimage/usr/bin:/mnt/sysimage/usr/sbin:/mnt/sysimage/sbin PYTHONPATH=/tmp/updates TERM=linux
