Implement an option that lets anaconda name mpath devices by the wwid.
Adds a new option dialog to the filtering screen, with a checkbox. If user
unchecks this, /etc/multipath.conf is generated with user_friendly_names
set to "no". This will give all mpath devices names in the
/dev/mapper/<wwid> format, partitions are /dev/mapper<wwid>p1.

The setting defaults to using the friendly names.

Resolves: rhbz#709653

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -158,6 +158,7 @@ ui/blwhere.glade.h
 ui/cleardisks.glade.h
 ui/create-storage.glade.h
 ui/detailed-dialog.glade.h
+ui/device-options.glade.h
 ui/fcoe-config.glade.h
 ui/filter.glade.h
 ui/iscsi-dialogs.glade.h
