Implement an option that lets anaconda name mpath devices by the wwid.
Adds a new option dialog to the filtering screen, with a checkbox. If user
unchecks this, /etc/multipath.conf is generated with user_friendly_names
set to "no". This will give all mpath devices names in the
/dev/mapper/<wwid> format, partitions are /dev/mapper<wwid>p1.

The setting defaults to using the friendly names.

Resolves: rhbz#709653

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -153,6 +153,7 @@ data/ui/blwhere.glade.h
 data/ui/cleardisks.glade.h
 data/ui/create-storage.glade.h
 data/ui/detailed-dialog.glade.h
+data/ui/device-options.glade.h
 data/ui/fcoe-config.glade.h
 data/ui/filter.glade.h
 data/ui/iscsi-dialogs.glade.h
