Use xz compression on initrd.img, add back gfx firmware (#703914)
Use xz compression on the initrd.img file and bring back the explicitly
removed graphics hardware firmware.  These were eliminated on ppc64 to
get the size of the initrd.img down to 32MB or smaller due to
limitations of that platform.  With xz compression, we can hopefully
bring back the graphics firmware which are necessary for certain
systems.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -107,6 +107,7 @@ Requires: device-mapper-libs >= %{dmver}
 Requires: dosfstools
 Requires: e2fsprogs >= %{e2fsver}
 Requires: gzip
+Requires: xz
 Requires: libarchive
 %ifarch %{ix86} x86_64 ia64
 Requires: dmidecode
