Fix a bug where language names aren't translated to native.
(1) We need translations built before running getlangnames.py.
(2) getlangnames.py is looking in the wrong place for .gmo files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,8 +19,8 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = pyanaconda loader gptsync data \
-	  tests utils scripts docs po
+SUBDIRS = pyanaconda loader gptsync po data \
+	  tests utils scripts docs
 
 EXTRA_DIST = config.rpath COPYING \
              anaconda.spec.in
